added fancify text page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <ol class="list">
             <li class="list-item"><a href="sitemap.html">Sitemap exercise</a></li>
             <li class="list-item"><a href="index.html">This website!</a></li>
+            <li class="list-item"><a href="fancifymytext.html">Fancify text</a></li>
         </ol>
     </section>
     
